--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     />
   </head>
   <body>
-    <div class="starwars-1">
-      <button class="btn-all">Karakterleri Göster</button>
+  
+    <div id="panel"></div>
+   
+    <div class="container">
+      <div class="row">
+        
+      </div>
     </div>
-
     
-
     <script src="App.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
