--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </head>
   <body>
   
-    <div id="panel"></div>
+    <div id="panel">
+    </div>
    
     <div class="container">
       <div class="row">
