add filter button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
   
-    <div id="panel">
-    </div>
+    <div id="panel"></div> 
+    <div id="filter-btn"></div>
    
     <div class="container">
       <div class="row">
