filter-button-modified

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   </head>
   <body>
   
+    <div id="filter-btn">
+      <div class="filter"></div>
+    </div>
+
     <div id="panel"></div> 
-    <div id="filter-btn"></div>
-   
+    
     <div class="container">
       <div class="row">
         
